@@ -790,4 +790,6 @@
 
 /[b-d\x{200}-\x{250}]*[ae-h]?#[\x{200}-\x{250}]{0,8}[\x00-\xff]*#[\x{200}-\x{250}]+[a-z]/8BZ
 
+/[^\xff]*PRUNE:\x{100}abc(xyz(?1))/8DZ
+
 /-- End of testinput5 --/
